Compile instructions
You have to add a few arguments to compile, updated instructions on how to do that.